src/main/java/com/example/coursemanagement/services/exceptions/errors/BadRequestException.java
package com.example.coursemanagement.services.exceptions.errors;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) {
        super(message);
    }
}
